@@ -1,25 +1,30 @@
 package edu.icet.eventicks.service.impl;
 
 import edu.icet.eventicks.dto.TicketDto;
+import edu.icet.eventicks.dto.UserDto;
+import edu.icet.eventicks.entity.EventEntity;
 import edu.icet.eventicks.entity.TicketEntity;
+import edu.icet.eventicks.entity.UserEntity;
 import edu.icet.eventicks.repository.TicketRepository;
-import edu.icet.eventicks.repository.UserRepository;
+import edu.icet.eventicks.service.EventService;
 import edu.icet.eventicks.service.TicketService;
+import edu.icet.eventicks.service.UserService;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class TicketServiceImpl implements TicketService {
     private final TicketRepository ticketRepository;
-    private final UserRepository userRepository;
+    private final UserService userService;
+    private final EventService eventService;
     private final ModelMapper modelMapper;
 
     @Override
@@ -36,43 +41,60 @@ public class TicketServiceImpl implements TicketService {
         if (ticketId == null || !ticketRepository.existsById(ticketId)) {
             return null;
         }
-        return modelMapper.map(ticketRepository.findById(ticketId), TicketDto.class);
+        Optional<TicketEntity> ticketEntity = ticketRepository.findById(ticketId);
+        return ticketEntity.map(entity -> modelMapper.map(entity, TicketDto.class)).orElse(null);
     }
 
     @Override
     public List<TicketDto> getFilteredTickets(String status, String type, Integer eventId) {
-        if (status == null || status.isEmpty() || type == null || type.isEmpty() || eventId == null) {
+        if ((status == null || status.isEmpty()) &&
+                (type == null || type.isEmpty()) &&
+                eventId == null) {
             return Collections.emptyList();
         }
+
         List<TicketEntity> allTickets = ticketRepository.findAll();
-        List<TicketDto> tickets = new ArrayList<>();
-        allTickets.forEach(entity -> {
-            if (entity.getStatus().equals(status) && entity.getType().equals(type) && entity.getEventId().equals(eventId)) {
+        List<TicketDto> filteredTickets = new ArrayList<>();
+
+        for (TicketEntity entity : allTickets) {
+            boolean statusMatch = status == null || status.isEmpty() || entity.getStatus().equals(status);
+            boolean typeMatch = type == null || type.isEmpty() || entity.getType().equals(type);
+            boolean eventMatch = eventId == null || entity.getEventId().equals(eventId);
+
+            if (statusMatch && typeMatch && eventMatch) {
                 TicketDto ticketDto = modelMapper.map(entity, TicketDto.class);
-                tickets.add(ticketDto);
+                filteredTickets.add(ticketDto);
             }
-        });
-        return tickets;
+        }
+
+        return filteredTickets;
     }
 
     @Override
     public List<TicketDto> getTicketsByEvent(Integer eventId) {
-        if (eventId == null){
+        if (eventId == null) {
             return Collections.emptyList();
         }
-        return ticketRepository.findByEventId(eventId).stream()
+
+        return ticketRepository.findByEvent(modelMapper.map(eventService.getEventById(eventId), EventEntity.class)).stream()
                 .map(entity -> modelMapper.map(entity, TicketDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<TicketDto> getTicketsBySeller(Integer sellerId) {
-        if (sellerId == null){
+        if (sellerId == null) {
             return Collections.emptyList();
         }
-        return ticketRepository.findBySeller(userRepository.findById(sellerId)).stream()
+
+        UserDto seller = userService.getUserById(sellerId);
+        if (seller == null) {
+            return Collections.emptyList();
+        }
+
+        return ticketRepository.findBySeller(modelMapper.map(seller, UserEntity.class)).stream()
                 .map(entity -> modelMapper.map(entity, TicketDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -95,7 +117,7 @@ public class TicketServiceImpl implements TicketService {
 
     @Override
     public TicketDto updateTicketStatus(Integer ticketId, String status) {
-        if (ticketId == null || !ticketRepository.existsById(ticketId)) {
+        if (ticketId == null || status == null || status.isEmpty() || !ticketRepository.existsById(ticketId)) {
             return null;
         }
         return ticketRepository.findById(ticketId)
